# EJD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  project-meta-info.in
.github/workflows/: build_cmake.yaml  ejd_ci.yaml
benchmarks/: BENCH_MonotoneStructs.cxx  CMakeLists.txt
include/: AnsiColor.hpp  Correlation.hpp  EmpiricalDistribution.hpp  Enumerate.hpp  ExtremeMeasures.hpp  PrettyPrint.hpp  Shell.hpp  Zip.hpp  libEJD.h
include/Utils/: AnsiColor.hpp  Enumerate.hpp  PrettyPrint.hpp  Range.hpp  Shell.hpp  Zip.hpp
src/: AnsiColor.cxx  Correlation.cxx  EmpiricalDistribution.cxx  ExtremeMeasures.cxx
tests/: CMakeLists.txt  MonotonicityStructuresTest.cxx  generic_test.cxx
tests/data/: ms2.json  ms3.json  ms4.json  ms5.json  ms6.json  ms7.json
tests/data/MonotonicityStructures/: ms8.json  ms9.json
tests/single_src_tests/: CorrelationTest.cxx  EmpDistrArray.cxx  EmpDistrArrayTest.cxx  ExtremeMeasuresTest.cxx  MonotonicityStructuresTest.cxx
